--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "firebaseui",
+  "name": "firebaseui-multilang",
   "version": "4.2.0",
   "description": "Javascript library for customizable UI on top of Firebase SDK",
   "files": [
-    "dist/firebaseui.js",
+    "dist/firebaseui__*.js",
     "dist/firebaseui.css",
-    "dist/npm.js",
-    "dist/esm.js",
+    "dist/firebaseui-rtl.css",
+    "dist/npm__*.js",
+    "dist/esm__*.js",
     "dist/index.d.ts",
     "dist/externs",
     "LICENSE",
@@ -31,7 +32,7 @@
   "author": "Google",
   "repository": {
     "type": "git",
-    "url": "https://github.com/firebase/firebaseui-web.git"
+    "url": "https://github.com/firekit/firebaseui-web-multilang.git"
   },
   "license": "Apache-2.0",
   "devDependencies": {
