--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,9 @@ node_modules/
 # Generated directories.
 generated/
 out/
-dist/
+dist/externs
+dist/firebaseui*
+dist/index.d.ts
 
 # Generated files.
 *.log
